full_output.txt
warning: `C:\Users\nalum\nih-plug-projects\dtcwpt_morph\.cargo\config` is deprecated in favor of `config.toml`
  |
  = help: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Checking dtcwpt_morph v0.1.0 (C:\Users\nalum\nih-plug-projects\dtcwpt_morph)
error[E0433]: failed to resolve: could not find `layout` in `nih_plug`
   --> src\lib.rs:129:27
    |
129 |                 nih_plug::layout::AuxiliaryInputConfig {
    |                           ^^^^^^ could not find `layout` in `nih_plug`

error[E0433]: failed to resolve: could not find `layout` in `nih_plug`
   --> src\lib.rs:132:33
    |
132 |                     ..nih_plug::layout::AuxiliaryInputConfig::const_default()
    |                                 ^^^^^^ could not find `layout` in `nih_plug`

warning: unused import: `nih_plug_egui::EguiState`
 --> src\lib.rs:2:5
  |
2 | use nih_plug_egui::EguiState;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: use of deprecated associated function `nih_plug_egui::egui::Frame::none`: Use `Frame::NONE` or `Frame::new()` instead.
   --> src\editor.rs:186:37
    |
186 |                 .frame(egui::Frame::none().fill(BG_COLOR))
    |                                     ^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `nih_plug_egui::egui::DragValue::<'a>::clamp_range`: Use `range` instead
   --> src\editor.rs:273:94
    |
273 | ...                   if ui.add(egui::DragValue::new(&mut mag).speed(0.01).clamp_range(0.0..=1.0)).changed() {
    |                                                                            ^^^^^^^^^^^

warning: use of deprecated method `nih_plug_egui::egui::DragValue::<'a>::clamp_range`: Use `range` instead
   --> src\editor.rs:301:96
    |
301 | ...                   if ui.add(egui::DragValue::new(&mut phase).speed(0.01).clamp_range(0.0..=1.0)).changed() {
    |                                                                              ^^^^^^^^^^^

warning: use of deprecated method `nih_plug_egui::egui::DragValue::<'a>::clamp_range`: Use `range` instead
   --> src\editor.rs:330:93
    |
330 | ...                   if ui.add(egui::DragValue::new(&mut thr).speed(1.0).clamp_range(-60.0..=0.0).suffix(" dB")).changed() {
    |                                                                           ^^^^^^^^^^^

warning: unused variable: `is_pure_h`
   --> src\processor.rs:352:17
    |
352 | ...   let is_pure_h = dest == 3 || (dest > 1 && (dest & (dest + 1)) == 0 && dest.count_ones() == (dest.trailing_ones())); // Pure H path:...
    |           ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_pure_h`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `node_ids`
   --> src\processor.rs:539:5
    |
539 |     node_ids: &[usize],
    |     ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_node_ids`

For more information about this error, try `rustc --explain E0433`.
warning: `dtcwpt_morph` (lib) generated 7 warnings
error: could not compile `dtcwpt_morph` (lib) due to 2 previous errors; 7 warnings emitted
